<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:padding="10dp"
            android:text="@string/title_register"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/id_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_id"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:hint="@string/id_hint"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/contact_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_contact"
                android:layout_marginLeft="10dp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:hint="@string/contact_hint"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/phone_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_phone"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:hint="@string/phone_hint"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/email_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_email"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:hint="@string/email_hint"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/username_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_username"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:hint="@string/username_hint"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:text="@string/password_register"
                android:textSize="18sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/field_password"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_marginLeft="10dp"
                android:hint="@string/password_hint"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btn_submit"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/btn_clear"/>

    </LinearLayout>

</LinearLayout>